# backend/routes/router.js
@@ -9,7 +9,7 @@ var setSchedule = require('../controllers/timeslot');
 var deleteSchedule = require('../controllers/deleteschedule');
 var approveSchedule = require('../controllers/approveschedule');
 var getSchedules = require('../controllers/getschedules');
-
+var getSchedulesAdmin = require('../controllers/getschedulesadmin');
 router.post("/login", (request, response) => {
     login(request, response);
 });
@@ -25,6 +25,11 @@ router.put("/updatetimeslot", (request, response) => {
 router.get('/getschedules/:user', (request, response) => {
     getSchedules(request, response);
 });
+
+router.get('/getschedulesadmin', (request, response) => {
+    getSchedulesAdmin(request, response);
+});
+
 router.post("/setschedule", (request, response) => {
     setSchedule(request, response);
 });
